--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
+    margin-bottom: 1rem;
 }
 
 .heading-primary-main {
@@ -59,7 +60,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.2px;
-    transform: translateX(5px);
+    transform: translateX(-10px);
     animation: moveInRight 1s ease-out;
 }
 
@@ -69,6 +70,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
+    text-align: center;
 }
 
 @keyframes moveInLeft {
@@ -100,4 +102,70 @@ body {
         opacity: 1;
         transform: translateX(0%);
     }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0%);
+    }
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 100px;
+    transition: all 0.2s;
+    position: relative;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.2s ease;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 0.5s ease-out;
+    animation-fill-mode: backwards;
 }
