--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -32,3 +32,39 @@ body {
         margin-bottom: 4rem;
     }
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-image: linear-gradient(
+        to right,
+        $color_primary-light,
+        $color-primary-dark
+    );
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 0.2rem;
+    transition: all 0.2s;
+
+    &:hover {
+        transform: scale(1.025);
+        text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
