--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,7 +6,7 @@
         padding: 1.5rem 4rem;
         display: inline-block;
         cursor: pointer;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
         border-radius: 10rem;
         transition: all 0.2s;
         position: relative;
@@ -52,5 +52,30 @@
     &--animated {
         animation: moveInBottom 0.5s ease-out;
         animation-fill-mode: backwards;
+    }
+}
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: $default-font-size;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 0.3rem;
+        transition: all 0.2s;
+    }
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+        transform: translateY(-2px);
+    }
+
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
 }
