--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 
 //All Component declarations
 @import "./components/button";
-
+@import "./components/composition";
 //All Layoout declarations
 @import "./layout/header";
 @import "./layout/grid";
