--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 //All Component declarations
 @import "./components/button";
 @import "./components/composition";
+@import "./components/feature-box.scss";
 //All Layoout declarations
 @import "./layout/header";
 @import "./layout/grid";
