--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,7 +3,7 @@
 }
 
 .u-margin-bottom-small {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .u-margin-bottom-medium {
@@ -12,4 +12,56 @@
 
 .u-margin-bottom-big {
     margin-bottom: 8rem;
+}
+
+.u-margin-bottom-large {
+    margin-bottom: 16rem;
+}
+
+.u-margin-top-small {
+    margin-top: 2rem;
+}
+
+.u-margin-top-medium {
+    margin-top: 4rem;
+}
+
+.u-margin-top-big {
+    margin-top: 8rem;
+}
+
+.u-margin-top-large {
+    margin-top: 16rem;
+}
+
+.u-margin-neg-bottom-small {
+    margin-bottom: -2rem;
+}
+
+.u-margin-neg-bottom-medium {
+    margin-bottom: -4rem;
+}
+
+.u-margin-neg-bottom-big {
+    margin-bottom: -8rem;
+}
+
+.u-margin-neg-bottom-large {
+    margin-bottom: -16rem;
+}
+
+.u-margin-neg-top-small {
+    margin-top: -2rem;
+}
+
+.u-margin-neg-top-medium {
+    margin-top: -4rem;
+}
+
+.u-margin-neg-top-big {
+    margin-top: -8rem;
+}
+
+.u-margin-neg-top-large {
+    margin-top: -16rem;
 }
