--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,9 @@
 //All Component declarations
 @import "./components/button";
 @import "./components/composition";
-@import "./components/feature-box.scss";
+@import "./components/feature-box";
+@import "./components/card";
+
 //All Layoout declarations
 @import "./layout/header";
 @import "./layout/grid";
