--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,8 +14,14 @@
         url(../images/nat-4.jpg);
     background-size: cover;
     transform: skewY(-7deg);
+    margin-top: -15rem;
 
     & > * {
         transform: skewY(7deg);
     }
+}
+
+.section-tours {
+    padding: 25rem 0 50rem 0;
+    margin-top: -15rem;
 }
