--- a/css/style.css
+++ b/css/style.css
@@ -91,55 +91,55 @@ body {
     margin-bottom: 3rem; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-margin-bottom-small {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem !important; }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem !important; }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem; }
+  margin-bottom: 8rem !important; }
 
 .u-margin-bottom-large {
-  margin-bottom: 16rem; }
+  margin-bottom: 16rem !important; }
 
 .u-margin-top-small {
-  margin-top: 2rem; }
+  margin-top: 2rem !important; }
 
 .u-margin-top-medium {
-  margin-top: 4rem; }
+  margin-top: 4rem !important; }
 
 .u-margin-top-big {
-  margin-top: 8rem; }
+  margin-top: 8rem !important; }
 
 .u-margin-top-large {
-  margin-top: 16rem; }
+  margin-top: 16rem !important; }
 
 .u-margin-neg-bottom-small {
-  margin-bottom: -2rem; }
+  margin-bottom: -2rem !important; }
 
 .u-margin-neg-bottom-medium {
-  margin-bottom: -4rem; }
+  margin-bottom: -4rem !important; }
 
 .u-margin-neg-bottom-big {
-  margin-bottom: -8rem; }
+  margin-bottom: -8rem !important; }
 
 .u-margin-neg-bottom-large {
-  margin-bottom: -16rem; }
+  margin-bottom: -16rem !important; }
 
 .u-margin-neg-top-small {
-  margin-top: -2rem; }
+  margin-top: -2rem !important; }
 
 .u-margin-neg-top-medium {
-  margin-top: -4rem; }
+  margin-top: -4rem !important; }
 
 .u-margin-neg-top-big {
-  margin-top: -8rem; }
+  margin-top: -8rem !important; }
 
 .u-margin-neg-top-large {
-  margin-top: -16rem; }
+  margin-top: -16rem !important; }
 
 .section-about {
   background-color: #f7f7f7;
@@ -156,10 +156,29 @@ body {
     transform: skewY(7deg); }
 
 .section-tours {
-  padding: 25rem 0 50rem 0;
-  margin-top: -15rem; }
+  padding: 25rem 0 10rem 0;
+  margin-top: -15rem;
+  background-color: #f7f7f7; }
 
-.btn:link, .btn:visited {
+.section-stories {
+  padding: 15rem 0;
+  position: relative; }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem; }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
+
+.btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -168,7 +187,9 @@ body {
   font-size: 1.6rem;
   border-radius: 10rem;
   transition: all 0.2s;
-  position: relative; }
+  position: relative;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -177,7 +198,8 @@ body {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
@@ -188,10 +210,22 @@ body {
     background-color: #fff; }
 
 .btn--green {
-  background-color: #55c57a;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
   color: #fff; }
   .btn--green::after {
-    background-color: #55c57a; }
+    background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.btn--orange {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+  color: #fff; }
+  .btn--orange::after {
+    background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+
+.btn--blue {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
+  color: #fff; }
+  .btn--blue::after {
+    background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
 
 .btn::after {
   content: "";
@@ -215,7 +249,7 @@ body {
   display: inline-block;
   text-decoration: none;
   border-bottom: 1px solid #55c57a;
-  padding: 0.3rem;
+  padding: 0.5rem;
   transition: all 0.2s; }
 
 .btn-text:hover {
@@ -374,6 +408,140 @@ body {
     font-size: 6rem;
     font-weight: 100; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 8rem;
+  padding-left: 9rem;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+  position: relative;
+  transition: all 0.5s; }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__image {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    transition: all 0.5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -20%);
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden; }
+  .story:hover .story__caption {
+    transform: translate(-50%, -50%);
+    opacity: 1; }
+  .story:hover .story__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-bottom: 3px solid transparent;
+  font-family: inherit;
+  border: none;
+  width: 100%;
+  color: inherit;
+  display: block;
+  transition: all 0.2s; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #55c57a; }
+  .form__input:focus:invalid {
+    border-bottom: 3px solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
+.form__label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-left: 2rem;
+  display: block;
+  transition: all 0.3s; }
+
+.form__input:placeholder-shown + .form__label {
+  transform: translateY(-3.4rem);
+  visibility: hidden;
+  opacity: 0; }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block; }
+
+.form__radio-input {
+  display: none; }
+
+.form__radio-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  position: relative;
+  padding-left: 4.5rem; }
+
+.form__radio-button {
+  height: 3rem;
+  width: 3rem;
+  border: 5px solid #55c57a;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: -0.4rem; }
+  .form__radio-button::after {
+    content: "";
+    height: 1.25rem;
+    width: 1.25rem;
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #55c57a;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.2s; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
+
 .header {
   height: 95vh;
   background-color: red;
@@ -394,12 +562,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin: 0 auto;
-    text-align: center;
-    position: absolute;
-    text-align: right;
-    top: 12rem;
-    right: 2rem; }
+    text-align: center; }
 
 .row {
   max-width: 114rem;
