--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -10,6 +11,11 @@
         border-radius: 10rem;
         transition: all 0.2s;
         position: relative;
+
+        // Changes for Button
+
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -22,7 +28,9 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
@@ -37,11 +45,53 @@
     }
 
     &--green {
-        background-color: $color-primary;
+        background-image: linear-gradient(
+            to right bottom,
+            $color-primary-light,
+            $color-primary-dark
+        );
         color: $color-white;
 
         &::after {
-            background-color: $color-primary;
+            background-image: linear-gradient(
+                to right bottom,
+                $color-primary-light,
+                $color-primary-dark
+            );
+        }
+    }
+
+    &--orange {
+        background-image: linear-gradient(
+            to right bottom,
+            $color-secondary-light,
+            $color-secondary-dark
+        );
+        color: $color-white;
+
+        &::after {
+            background-image: linear-gradient(
+                to right bottom,
+                $color-secondary-light,
+                $color-secondary-dark
+            );
+        }
+    }
+
+    &--blue {
+        background-image: linear-gradient(
+            to right bottom,
+            $color-tertiary-light,
+            $color-tertiary-dark
+        );
+        color: $color-white;
+
+        &::after {
+            background-image: linear-gradient(
+                to right bottom,
+                $color-tertiary-light,
+                $color-tertiary-dark
+            );
         }
     }
 
@@ -72,7 +122,7 @@
         display: inline-block;
         text-decoration: none;
         border-bottom: 1px solid $color-primary;
-        padding: 0.3rem;
+        padding: 0.5rem;
         transition: all 0.2s;
     }
 
