--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -73,7 +73,7 @@
         top: -0.4rem;
 
         &::after {
-            content: "";
+            content: '';
             height: 1.25rem;
             width: 1.25rem;
             display: block;
