--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import './pages/home';
 
 //All Component declarations
+@import './components/popup';
 @import './components/button';
 @import './components/composition';
 @import './components/feature-box';
