--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+/*
+0 - 600         Phone
+600 - 900       Tablet Portrait
+900 - 1200      Tablet landscape
+1200 - 1800     Normal styles
+1800+           Big desktops
+*/
+/*
+Breakpoint choices
+- phone
+- tab-port
+- tab-lab
+- big-desktop
+*/
 *,
 *::after,
 *::before {
@@ -7,6 +21,9 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 600px) {
+    html {
+      font-size: 50%; } }
 
 @keyframes moveInLeft {
   0% {
