--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,34 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+//MEDIA QUERY MANAGERS
+/*
+0 - 600         Phone
+600 - 900       Tablet Portrait
+900 - 1200      Tablet landscape
+1200 - 1800     Normal styles
+1800+           Big desktops
+*/
+
+@mixin respond-phone {
+    @media (max-width: 600px) {
+        @content;
+    }
+}
+
+/*
+Breakpoint choices
+- phone
+- tab-port
+- tab-lab
+- big-desktop
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 600px) {
+            @content;
+        }
+    }
+}
