--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ Breakpoint choices
 - tab-port
 - tab-lab
 - big-desktop
+1 em = 16px - ems work best with media queries
 */
 *,
 *::after,
@@ -21,9 +22,18 @@ Breakpoint choices
 
 html {
   font-size: 62.5%; }
-  @media (max-width: 600px) {
+  @media (max-width: 37.5em) {
     html {
       font-size: 50%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 60%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 70%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 80%; } }
 
 @keyframes moveInLeft {
   0% {
