--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,7 +10,19 @@ html {
     //This is global declared what 1REM is
     font-size: 62.5%;
 
-    @include respond-phone {
+    @include respond(phone) {
         font-size: 50%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 60%;
+    }
+
+    @include respond(tab-land) {
+        font-size: 70%;
+    }
+
+    @include respond(big-desktop) {
+        font-size: 80%;
     }
 }
