--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,21 +8,19 @@
 
 html {
     //This is global declared what 1REM is
-    font-size: 62.5%;
+    font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
 
-    @include respond(phone) {
-        font-size: 50%;
-    }
-
-    @include respond(tab-port) {
-        font-size: 60%;
+    @include respond(big-desktop) {
+        font-size: 75%; //1rem = 12px, 12/16
     }
 
     @include respond(tab-land) {
-        font-size: 70%;
+        //width < 900?
+        font-size: 56.25%; //1rem = 9px 9/16 = 56.25%
     }
 
-    @include respond(big-desktop) {
-        font-size: 80%;
+    @include respond(tab-port) {
+        //width < 600?
+        font-size: 50%; //1rem = 8px 8/16 = 50%
     }
 }
