media query ongoing

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,16 @@
         box-shadow: 0px 1rem 2rem rgba(0, 0, 0, 0.4);
         z-index: 2000;
         cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &__background {
@@ -30,6 +40,16 @@
         );
         z-index: 1000;
         transition: all 0.5s;
+
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &__nav {
