--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,6 +11,7 @@ html {
     font-size: 62.5%; //1rem = 10px; 10px/16px = 62.5%
 
     @include respond(big-desktop) {
+        //width > 1800
         font-size: 75%; //1rem = 12px, 12/16
     }
 
@@ -22,5 +23,15 @@ html {
     @include respond(tab-port) {
         //width < 600?
         font-size: 50%; //1rem = 8px 8/16 = 50%
+    }
+}
+
+body {
+    padding: 3rem;
+    box-sizing: border-box;
+
+    @include respond(tab-port) {
+        //width < 600?
+        padding: 0;
     }
 }
