--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,9 +1,8 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     /* font-size: 16px; */
     font-weight: 400;
     color: $color-grey-dark;
-    padding: 3rem;
     line-height: 1.7;
     box-sizing: border-box;
 }
@@ -20,6 +19,11 @@ body {
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -30,6 +34,10 @@ body {
         transform: translateX(-10px);
         animation: moveInRight 1s ease-out;
         margin-bottom: 4rem;
+
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+        }
     }
 }
 
@@ -48,6 +56,14 @@ body {
     color: transparent;
     letter-spacing: 0.2rem;
     transition: all 0.2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: scale(1.025);
