--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -36,32 +36,64 @@
 
 .u-margin-neg-bottom-small {
     margin-bottom: -2rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -1rem !important;
+    }
 }
 
 .u-margin-neg-bottom-medium {
     margin-bottom: -4rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -2rem !important;
+    }
 }
 
 .u-margin-neg-bottom-big {
     margin-bottom: -8rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -4rem !important;
+    }
 }
 
 .u-margin-neg-bottom-large {
     margin-bottom: -16rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -8rem !important;
+    }
 }
 
 .u-margin-neg-top-small {
     margin-top: -2rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -1rem !important;
+    }
 }
 
 .u-margin-neg-top-medium {
     margin-top: -4rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -2rem !important;
+    }
 }
 
 .u-margin-neg-top-big {
     margin-top: -8rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -4rem !important;
+    }
 }
 
 .u-margin-neg-top-large {
     margin-top: -16rem !important;
+
+    @include respond(tab-port) {
+        margin-bottom: -8rem !important;
+    }
 }
