--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,8 +3,17 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include repond(tab-port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
+        margin-bottom: 8rem;
+
+        @include repond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
@@ -17,6 +26,11 @@
         display: inline-block;
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
+
+        @include repond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -53,5 +67,11 @@
         padding-top: 2rem;
         text-align: left;
         color: $color-grey-light-2;
+
+        @include repond(tab-port) {
+            width: 100%;
+            text-align: center;
+            float: none;
+        }
     }
 }
